initial scaffolding of quintons notebook

--- a/socials_notebooks/02_reddit_scraper.ipynb
+++ b/socials_notebooks/02_reddit_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2cc66017",
    "metadata": {},
    "outputs": [
@@ -16,7 +16,7 @@
       "--> Found 200 total posts.\n",
       "\n",
       "Filtering for mentions of MISO locations...\n",
-      "--> Found 3 posts relevant to MISO's territory.\n",
+      "--> Found 2 posts relevant to MISO's territory.\n",
       "\n",
       "Done! Here's your geo-filtered social data:\n"
      ]
@@ -49,19 +49,13 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Reddit r/energy</td>\n",
-       "      <td>Trump's major coal sales flop in Wyoming and M...</td>\n",
-       "      <td>https://wyofile.com/trumps-major-coal-sales-fl...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
+       "      <th>49</th>\n",
        "      <td>Reddit r/energy</td>\n",
        "      <td>As more renewable energy sources come onto the...</td>\n",
        "      <td>https://www.lpm.org/news/2025-10-03/wind-turbi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>121</th>\n",
+       "      <th>70</th>\n",
        "      <td>Reddit r/energy</td>\n",
        "      <td>Seems all a state needs is the will to push fo...</td>\n",
        "      <td>https://constructionreviewonline.com/news/reps...</td>\n",
@@ -71,15 +65,13 @@
        "</div>"
       ],
       "text/plain": [
-       "              source                                              title  \\\n",
-       "0    Reddit r/energy  Trump's major coal sales flop in Wyoming and M...   \n",
-       "100  Reddit r/energy  As more renewable energy sources come onto the...   \n",
-       "121  Reddit r/energy  Seems all a state needs is the will to push fo...   \n",
+       "             source                                              title  \\\n",
+       "49  Reddit r/energy  As more renewable energy sources come onto the...   \n",
+       "70  Reddit r/energy  Seems all a state needs is the will to push fo...   \n",
        "\n",
-       "                                                   url  \n",
-       "0    https://wyofile.com/trumps-major-coal-sales-fl...  \n",
-       "100  https://www.lpm.org/news/2025-10-03/wind-turbi...  \n",
-       "121  https://constructionreviewonline.com/news/reps...  "
+       "                                                  url  \n",
+       "49  https://www.lpm.org/news/2025-10-03/wind-turbi...  \n",
+       "70  https://constructionreviewonline.com/news/reps...  "
       ]
      },
      "metadata": {},
@@ -156,19 +148,11 @@
     "df_filtered.to_csv('../data/raw/reddit_titles_filtered.csv', index=False)\n",
     "print(\"\\nFiltered data saved to /data/raw/reddit_titles_filtered.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2854b9eb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "xtern-venv",
+   "display_name": ".MISO-venv",
    "language": "python",
    "name": "python3"
   },
