--- a/notebooks/06_final_analysis.ipynb
+++ b/notebooks/06_final_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "99651c2b",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
     "import os\n",
     "\n",
     "# --- 1. LOAD ALL YOUR DATA ---\n",
-    "reddit_path = '../data/raw/reddit_titles.csv'\n",
+    "reddit_path = '../data/raw/reddit_titles_filtered.csv'\n",
     "twitter_path = '../data/raw/twitter_data.csv'\n",
     "\n",
     "# Load the two datasets you created\n",
@@ -59,6 +59,14 @@
     "except ValueError as e:\n",
     "    print(f\"\\n--- Analysis Error --- \\n{e}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ea6acdc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
