--- a/bills_notebooks/congress_analysis.ipynb
+++ b/bills_notebooks/congress_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "4a1df3d8",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/m8/81ptgb3x7j755glt7xp0jptc0000gn/T/ipykernel_45770/1006282416.py:27: FutureWarning: 'M' is deprecated and will be removed in a future version, please use 'ME' instead.\n",
+      "/var/folders/m8/81ptgb3x7j755glt7xp0jptc0000gn/T/ipykernel_45770/3851230636.py:27: FutureWarning: 'M' is deprecated and will be removed in a future version, please use 'ME' instead.\n",
       "  periods = pd.date_range(start=start_date, end=end_date, freq=freq).to_pydatetime().tolist()\n"
      ]
     }
@@ -116,7 +116,8 @@
     "# filter df because it returns all available results... (back to 1993)\n",
     "bills_df = bills_df[bills_df['introduced_date'] >= pd.to_datetime(\"2018-01-01\")]\n",
     "# display(bills_df)\n",
-    "# bills_df.to_csv(\"bills_energy.csv\", index=False)"
+    "timestamp = datetime.now().strftime(\"%Y%m%d\")\n",
+    "bills_df.to_csv(f\"../data/bills/congress_bills_{timestamp}.csv\", index=False)"
    ]
   },
   {
