--- a/socials_notebooks/02_reddit_scraper.ipynb
+++ b/socials_notebooks/02_reddit_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2cc66017",
    "metadata": {},
    "outputs": [
@@ -16,7 +16,7 @@
       "--> Found 200 total posts.\n",
       "\n",
       "Filtering for mentions of MISO locations...\n",
-      "--> Found 4 posts relevant to MISO's territory.\n",
+      "--> Found 3 posts relevant to MISO's territory.\n",
       "\n",
       "Done! Here's your geo-filtered social data:\n"
      ]
@@ -49,28 +49,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>0</th>\n",
+       "      <td>Reddit r/energy</td>\n",
+       "      <td>Trump's major coal sales flop in Wyoming and M...</td>\n",
+       "      <td>https://wyofile.com/trumps-major-coal-sales-fl...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
        "      <td>Reddit r/energy</td>\n",
        "      <td>As more renewable energy sources come onto the...</td>\n",
        "      <td>https://www.lpm.org/news/2025-10-03/wind-turbi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
+       "      <th>121</th>\n",
        "      <td>Reddit r/energy</td>\n",
        "      <td>Seems all a state needs is the will to push fo...</td>\n",
        "      <td>https://constructionreviewonline.com/news/reps...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>175</th>\n",
-       "      <td>Reddit r/energy</td>\n",
-       "      <td>Chevron hit with historic $744 million verdict...</td>\n",
-       "      <td>https://cleantechtimes.com/news/chevron-hit-wi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>178</th>\n",
-       "      <td>Reddit r/energy</td>\n",
-       "      <td>Deal after deal. From East to West. Australia'...</td>\n",
-       "      <td>https://constructionreviewonline.com/news/wood...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -78,16 +72,14 @@
       ],
       "text/plain": [
        "              source                                              title  \\\n",
-       "9    Reddit r/energy  As more renewable energy sources come onto the...   \n",
-       "27   Reddit r/energy  Seems all a state needs is the will to push fo...   \n",
-       "175  Reddit r/energy  Chevron hit with historic $744 million verdict...   \n",
-       "178  Reddit r/energy  Deal after deal. From East to West. Australia'...   \n",
+       "0    Reddit r/energy  Trump's major coal sales flop in Wyoming and M...   \n",
+       "100  Reddit r/energy  As more renewable energy sources come onto the...   \n",
+       "121  Reddit r/energy  Seems all a state needs is the will to push fo...   \n",
        "\n",
        "                                                   url  \n",
-       "9    https://www.lpm.org/news/2025-10-03/wind-turbi...  \n",
-       "27   https://constructionreviewonline.com/news/reps...  \n",
-       "175  https://cleantechtimes.com/news/chevron-hit-wi...  \n",
-       "178  https://constructionreviewonline.com/news/wood...  "
+       "0    https://wyofile.com/trumps-major-coal-sales-fl...  \n",
+       "100  https://www.lpm.org/news/2025-10-03/wind-turbi...  \n",
+       "121  https://constructionreviewonline.com/news/reps...  "
       ]
      },
      "metadata": {},
@@ -164,11 +156,19 @@
     "df_filtered.to_csv('../data/raw/reddit_titles_filtered.csv', index=False)\n",
     "print(\"\\nFiltered data saved to /data/raw/reddit_titles_filtered.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2854b9eb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "xtern-venv",
    "language": "python",
    "name": "python3"
   },
@@ -182,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
